--- a/package.json
+++ b/package.json
@@ -95,5 +95,20 @@
   "publishConfig": {
     "access": "public",
     "tag": "latest"
+  },
+  "adonisjs": {
+    "instructions": "./build/instructions.js",
+    "instructionsMd": "./build/instructions.md",
+    "templates": {
+      "config": [
+        "service-interface.txt",
+        "service-provider.txt",
+        "service.txt"
+      ]
+    },
+    "types": "@djpfs/adonisjs-service",
+    "providers": [
+      "@djpfs/adonisjs-service"
+    ]
   }
 }
